# linux-syscall-support

./: BUILD.bazel  OWNERS  README.md  codereview.settings  groups  linux_syscall_support.h  project.config
tests/: .gitignore  Makefile  README.md  clone.c  dup.c  dup2.c  dup3.c  fork.c  getitimer.c  getpgid.c  getpgrp.c  getrandom.c  lseek.c  mmap.c  open-cpp.cc  open.c  openat.c  pipe.c  pipe2.c  prctl.c  read.c  readlink.c  rlimit.c  setitimer.c  sigaction.c  sigreturn.c  sigtimedwait.c  stat.c  statfs.c  test_skel.h  unlink.c  unlinkat.c  write.c
