# Description:
#   Linux Syscall Support (LSS) provides a header file that can be included
#   into your application whenever you need to make direct system calls.

package(
    default_visibility = ["//visibility:public"],
)

licenses(["notice"])

exports_files(["LICENSE"])

cc_library(
    name = "linux-syscall-support",
    hdrs = ["linux_syscall_support.h"],
)
